3/3.6/logs/dag_id=pratice_pg/run_id=manual__2022-11-30T10:40:17.781426+00:00/task_id=etl_task/attempt=1.log
[2022-11-30T10:40:22.834+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: pratice_pg.etl_task manual__2022-11-30T10:40:17.781426+00:00 [queued]>
[2022-11-30T10:40:22.840+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: pratice_pg.etl_task manual__2022-11-30T10:40:17.781426+00:00 [queued]>
[2022-11-30T10:40:22.840+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-30T10:40:22.840+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2022-11-30T10:40:22.840+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-30T10:40:22.846+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): etl_task> on 2022-11-30 10:40:17.781426+00:00
[2022-11-30T10:40:22.849+0000] {standard_task_runner.py:55} INFO - Started process 90 to run task
[2022-11-30T10:40:22.851+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'pratice_pg', 'etl_task', 'manual__2022-11-30T10:40:17.781426+00:00', '--job-id', '724', '--raw', '--subdir', 'DAGS_FOLDER/practice_pg.py', '--cfg-path', '/tmp/tmp10cujhz5']
[2022-11-30T10:40:22.854+0000] {standard_task_runner.py:83} INFO - Job 724: Subtask etl_task
[2022-11-30T10:40:22.887+0000] {task_command.py:376} INFO - Running <TaskInstance: pratice_pg.etl_task manual__2022-11-30T10:40:17.781426+00:00 [running]> on host 481f60569de1
[2022-11-30T10:40:22.923+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=pratice_pg
AIRFLOW_CTX_TASK_ID=etl_task
AIRFLOW_CTX_EXECUTION_DATE=2022-11-30T10:40:17.781426+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-30T10:40:17.781426+00:00
[2022-11-30T10:40:22.929+0000] {base.py:71} INFO - Using connection ID 'pgdb' for task execution.
[2022-11-30T10:40:22.931+0000] {sql.py:315} INFO - Running statement: CREATE TABLE if not exists practice_etl (game_number integer PRIMARY KEY, game_length integer NOT NULL, game_length_ratio numeric NOT NULL);
        TRUNCATE practice_etl;
        INSERT INTO practice_etl SELECT game_number, game_length, game_length/(SELECT MAX(game_length)::numeric from practice) from practice;, parameters: None
[2022-11-30T10:40:22.934+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 3: ...NTO practice_etl SELECT game_number, game_length, game_lengt...
                                                             ^

[2022-11-30T10:40:22.939+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=pratice_pg, task_id=etl_task, execution_date=20221130T104017, start_date=20221130T104022, end_date=20221130T104022
[2022-11-30T10:40:22.944+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 724 for task etl_task (INSERT has more expressions than target columns
LINE 3: ...NTO practice_etl SELECT game_number, game_length, game_lengt...
                                                             ^
; 90)
[2022-11-30T10:40:22.986+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-11-30T10:40:23.000+0000] {taskinstance.py:2623} INFO - 0 downstream tasks scheduled from follow-on schedule check
